--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "homepage": "",
   "scripts": {
     "postinstall": "[ -f app/assets/scripts/config/local.js ] || echo 'module.exports = {};' > app/assets/scripts/config/local.js",
-    "serve": "DS_ENV=development gulp serve",
+    "serve": "DS_ENV=development gulp collecticons && gulp serve",
     "build": "NODE_ENV=production gulp",
     "lint": "eslint app/assets/scripts/ --ext .js",
     "test": "echo \"No tests\" && exit 0"
@@ -44,6 +44,7 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
+    "collecticons-processor": "^3.0.0",
     "del": "^2.2.2",
     "envify": "^4.0.0",
     "eslint": "^3.15.0",
