--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-widgets": "^3.4.6",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "timeago-react": "^1.0.8"
   }
 }
