--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "classnames": "^2.2.5",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
+    "mapbox-gl": "^0.36.0",
     "react": "^15.4.2",
     "react-addons-create-fragment": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
