--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,15 @@ addons:
 
 cache:
   apt: true
+  yarn: true
   directories:
   - node_modules
 
 before_script:
-- npm test
+- yarn test
 
 script:
-- npm run build
+- yarn run build
 
 deploy:
   - provider: s3
