--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "react-router-scroll": "^0.4.1",
+    "react-sticky": "^6.0.0",
     "react-tether": "^0.5.6",
     "react-tooltip": "^3.2.9",
     "react-widgets": "^3.4.6",
