--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.8",
     "jeet": "7.1.0",
+    "marked": "^0.3.6",
     "node-bourbon": "^4.2.8",
     "node-notifier": "^5.0.2",
     "node-sass": "^4.5.0",
