--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postinstall": "[ -f app/assets/scripts/config/local.js ] || echo 'module.exports = {};' > app/assets/scripts/config/local.js",
     "serve": "DS_ENV=development gulp collecticons && gulp serve",
     "build": "NODE_ENV=production gulp",
+    "build-offline": "DS_ENV=offline NODE_ENV=production gulp",
     "lint": "eslint app/assets/scripts/ --ext .js",
     "test": "echo \"No tests\" && exit 0"
   },
