--- a/package.json
+++ b/package.json
@@ -85,10 +85,12 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mapbox-gl": "^0.36.0",
+    "qs": "^6.4.0",
     "react": "^15.4.2",
     "react-addons-create-fragment": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-paginate": "^4.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
