--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rural-road-accessibility",
-  "version": "0.2.0-alpha1",
-  "description": "Rural Road Accessibility",
+  "name": "rural-road-accessibility--frontend",
+  "version": "0.3.0",
+  "description": "World Bank project to assess rural road accessibility",
   "repository": {
     "type": "git",
     "url": "https://github.com/WorldBank-Transport/rra-frontend"
@@ -14,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/WorldBank-Transport/rra-frontend/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/WorldBank-Transport/rra-frontend",
   "scripts": {
     "postinstall": "[ -f app/assets/scripts/config/local.js ] || echo 'module.exports = {};' > app/assets/scripts/config/local.js",
     "serve": "DS_ENV=development gulp collecticons && gulp serve",
