Remove extra dash
[ci skip]

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ram--frontend",
+  "name": "ram-frontend",
   "version": "0.3.0",
   "description": "World Bank project to assess rural accessibility",
   "repository": {
