Allow env vars to be set when deploying the site. Fix 183 Instead of baking the pre-built site in the Docker image, the site has to be built when spinning up a Docker container

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,17 +20,11 @@ addons:
     packages:
     - g++-4.8
 
-cache:
-  apt: true
-  yarn: true
-  directories:
-  - node_modules
+# Skip the installation step
+install: true
 
 services:
   - docker
-
-before_script:
-- yarn test
 
 deploy:
 - provider: script
